<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_horizontal"
    tools:context=".ui.dashboard.DashboardFragment" >

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rgi_name"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_top_white_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/rgi_norider"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/rgi_nmrider"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/rgi_hprider"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/rgi_methrider"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/etxtNoRiderRegi"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/rgi_hint_norider"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#6878909C"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <EditText
        android:id="@+id/eTxtNmRiderRegi"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/rgi_hint_nmrider"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#6878909C"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <EditText
        android:id="@+id/etxtHpRiderRegi"
        android:layout_width="430dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/rgi_hint_hprider"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#6878909C"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <RadioGroup
        android:id="@+id/rg01"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checkedButton="@id/rb01"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13">

        <RadioButton
            android:id="@+id/rb01"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:text="@string/rgi_meth_01"
            android:textAlignment="center"
            android:textColor="@color/selector_radio_text_color"
            android:textSize="34sp" />

        <RadioButton
            android:id="@+id/rb02"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:text="@string/rgi_meth_02"
            android:textAlignment="center"
            android:textColor="@color/selector_radio_text_color"
            android:textSize="34sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/rg01"
        app:layout_constraintTop_toBottomOf="@+id/rg01">

        <RadioButton
            android:id="@+id/rb03"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:text="@string/rgi_meth_03"
            android:textAlignment="center"
            android:textColor="@color/selector_radio_text_color"
            android:textSize="34sp" />

        <RadioButton
            android:id="@+id/rb04"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:text="@string/rgi_meth_04"
            android:textAlignment="center"
            android:textColor="@color/selector_radio_text_color"
            android:textSize="34sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnRegi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_custom_out"
        android:text="@string/rgi_regi"
        android:textColor="#FFFBFB"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg02" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:checked="true"
        android:text="@string/rgi_agree_private"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegi" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/rgi_agree_01"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rgi_agree_02"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />
</android.support.constraint.ConstraintLayout>