<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_horizontal"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rs_name"
            android:textSize="48sp" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_top_white_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/etxtRsNoRider"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/rs_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#6878909C"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvRsRiderList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtRsNoRider" />

    <Button
        android:id="@+id/btnRsSearch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/btn_custom_out"
        android:text="@string/rs_search"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etxtRsNoRider"
        app:layout_constraintStart_toEndOf="@+id/etxtRsNoRider"
        app:layout_constraintTop_toTopOf="@+id/etxtRsNoRider" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/rs_no_title"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/etxtRsNoRider"
        app:layout_constraintEnd_toStartOf="@+id/etxtRsNoRider"
        app:layout_constraintTop_toTopOf="@+id/etxtRsNoRider" />

</android.support.constraint.ConstraintLayout>